# my_tg_template

./: .gitignore  README.md  main.py  pyproject.toml  start.sh
migrations/: env.py
migrations/versions/: 2025_01_16_2315-18d2fe42c328_new_models.py
src/: settings.py
src/database/: base.py
src/database/models/: __init__.py  events.py  tasks.py  users.py
src/filters/: chat.py
src/handlers/: main_router.py
src/handlers/admin/: router.py
src/handlers/admin/utils/: crud.py  tasks.py
src/handlers/users/: router.py
src/handlers/users/utils/: crud.py
src/keyboards/: in_line.py  keyboard.py
src/utils/: __init__.py  interface.py  repository.py
