[project]
name = "my-tg"
version = "0.0.1"
description = ""
authors = [
    {name = "Sultan",email = "sultankurbanov302@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram (>=3.17.0,<4.0.0)",
    "black (>=24.10.0,<25.0.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.14.0,<2.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "pydantic (>=2.10.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
